# family-films

./: .env.example  README.md  docker-compose.yml  package-lock.json  package.json
.claude/: settings.local.json
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20240101000000_initial.sql
backend/src/: db.rs  main.rs  models.rs  state.rs
backend/src/handlers/: mod.rs  people.rs  videos.rs
backend/templates/: base.html  index.html
backend/templates/people/: detail.html  form.html  list.html  search_results.html
backend/templates/videos/: detail.html  edit.html  form.html  list.html  search_results.html
