[package]
name = "family-films"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "family-films"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace", "set-header"] }

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

minijinja = { version = "1", features = ["loader"] }
minijinja-autoreload = "1"

tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
futures = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1"
thiserror = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
